--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "start": "npx tailwindcss -i ./src/index.css -o ./dist/output.css --watch"
   },
   "dependencies": {
+    "antd": "^5.11.5",
     "bcrypt": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
