--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.11.5",
     "bcrypt": "^5.1.1",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1"
   },
